create github pages

--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="cid-rJcjMkuVJW" id="image4-t">
+<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="cid-rJcjMkuVJW" id="image4-t">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
